# rbc-validator

./: .clang-format  .gitattributes  .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CMakeLists.txt  README.md  args.ggo  args_mpi.ggo  args_omp.ggo  gmp_key_iter.c  gmp_key_iter.h  hamming_benchmark.c  hamming_validator.c  hamming_validator_fork.c  hamming_validator_mpi.c  lookupwork.c  main.c  new_main.c  requirements.txt  uint256_key_iter.c  uint256_key_iter.h  uint256_t.c  uint256_t.h  util.c  util.h
.github/: test_aes_mpi.sh  test_aes_omp.sh  test_chach20_omp.sh  test_chacha20_mpi.sh  test_help_mpi.sh
.github/scripts/: test_aes_mpi.sh  test_aes_omp.sh  test_chacha20_mpi.sh  test_chacha20_omp.sh  test_ecc_mpi.sh  test_ecc_omp.sh  test_help_mpi.sh  test_help_omp.sh  test_sha1_mpi.sh  test_sha1_omp.sh  test_sha3-384_mpi.sh  test_sha3-384_omp.sh
.github/workflows/: ci.yml
.travis/: test_mpi.sh  test_omp.sh
cmake/: FindArgp.cmake  FindGMP.cmake  FindRT.cmake  FindUUID.cmake
lib/XKCP/: .gitignore  CMakeLists.txt
lib/micro-ecc/: curve-specific.inc
scripts/: K12.py  benchmark_frag.py  compare_keys.py  compare_seeds.py  config.py  deploy_msys.sh  fixed_aes_key_gen.py  fixed_chacha20_key_gen.py  fixed_ecc_key_gen.py  fixed_key_gen.py  fixed_sha1_key_gen.py  fixed_sha3-384_key_gen.py  frag_sim.py  get_ecc_public_key.py  util.py
src/: aes256-ni.c  aes256-ni.h  aes256_test.c  aes_validator.c  aes_validator_mpi.c  cipher_test.c  cmdline.c  cmdline.h  ecc256_test.c  ecc_test.c  ecc_validator.c  ecc_validator_mpi.c  gmp_key_iter.c  gmp_seed_iter.c  gmp_seed_iter.h  hamming_benchmark.c  hamming_validator.c  hamming_validator_fork.c  hamming_validator_mpi.c  hamming_validator_omp.c  hash_test.c  perm.c  perm.h  rbc_validator.c  seed_iter.c  seed_iter.h  uECC.c  uECC.h  uint256_key_iter.c  uint256_key_iter.h  uint256_t.c  uint256_t.h  util.c  util.h  uuid.c  uuid.h  validator.c  validator.h
src/cmdline/: cmdline_mpi.c  cmdline_mpi.h  cmdline_omp.c  cmdline_omp.h
src/crypto/: aes256-ni.h  aes256-ni_enc.c  aes256-ni_enc.h  cipher.c  cipher.h  ec.c  ec.h  hash.c  hash.h
src/iter/: gmp_key_iter.c  uint128_key_iter.c  uint128_key_iter.h  uint16_key_iter.c  uint256_key_iter.c  uint256_key_iter.h  uint64_key_iter.c  uint8_key_iter.h
